Fix safe SonarQube findings across backend services and tests
Apply safe, verified remediations across backend code and tests:
- Add @Autowired to ComfyUIStrategy(UserDataManager) constructor (S6829)
- Resolve blocker in PinnedFolderRepositoryTest with assertDoesNotThrow and uniqueness assertions (S2699)
- Replace Stream.collect(Collectors.toList()) with .toList() in UserDataManager (S6204)
- Remove unused fields and imports in SettingsRepository, UserDataManager, and test suites (S1068, S1128, S2924, S1481, S1854, S1130)
- Extract duplicated string literals across repositories, services, and strategies (S1192)
- Restore thread interrupt status on caught InterruptedExceptions in FileSystemService, ThumbnailService, and TaggerModelService (S2142)
- Document intentional empty catch blocks during cleanup and concurrency tests (S108)
- Rename restricted identifier 'record' in DuplicateService.BKTree (S6213)
- Document ComfyUIStrategy constructor DI trap in HANDOVER.md